--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -2,54 +2,134 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dynamic Quote Generator</title>
   <style>
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; padding: 24px; max-width: 900px; margin: auto; }
-    header { display:flex; justify-content:space-between; align-items:center; gap:16px; }
-    #quoteDisplay { margin: 20px 0; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); min-height: 64px; font-size:1.125rem; }
-    .controls { display:flex; gap:8px; flex-wrap:wrap; align-items:center; }
-    .small { font-size:0.9rem; color:#555; }
-    .form-section { margin-top:18px; padding:12px; border:1px dashed #ddd; border-radius:8px; }
-    .quotes-list { margin-top:18px; }
-    .quote-item { padding:8px 10px; border-radius:6px; display:flex; justify-content:space-between; gap:8px; align-items:center; background:#fafafa; margin-bottom:8px; }
-    .meta { font-size:0.85rem; color:#666; }
-    button { cursor:pointer; padding:8px 10px; border-radius:6px; border:1px solid #ccc; background:white; }
-    input, select, textarea { padding:8px; border-radius:6px; border:1px solid #ccc; }
+    body {
+      font-family: "Poppins", sans-serif;
+      background: #f5f7fa;
+      color: #333;
+      padding: 2rem;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    h1 {
+      text-align: center;
+      color: #444;
+    }
+
+    #quoteDisplay {
+      margin: 1.5rem 0;
+      padding: 1rem;
+      border-left: 5px solid #0078d4;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    }
+
+    .quote-text {
+      font-size: 1.2rem;
+      font-style: italic;
+    }
+
+    .quote-category {
+      color: #555;
+      text-align: right;
+      font-weight: bold;
+    }
+
+    select, input, button {
+      padding: 8px 12px;
+      margin: 5px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    button {
+      background: #0078d4;
+      color: white;
+      cursor: pointer;
+      border: none;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background: #005fa3;
+    }
+
+    #addQuoteContainer, #quotesListContainer {
+      margin-top: 1rem;
+      display: none;
+    }
+
+    .quote-item {
+      background: #fff;
+      padding: 0.7rem;
+      margin: 0.4rem 0;
+      border-radius: 6px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+
+    .quote-item .category {
+      display: block;
+      font-size: 0.9rem;
+      color: #555;
+      text-align: right;
+    }
+
+    .controls {
+      text-align: center;
+      margin: 1rem 0;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Dynamic Quote Generator</h1>
-    <div class="small">Persist quotes with localStorage • Import / Export JSON</div>
-  </header>
+  <h1>Dynamic Quote Generator</h1>
 
-  <section class="controls" aria-label="Primary controls">
+  <!-- Quote display -->
+  <div id="quoteDisplay">
+    <p class="quote-text">Click "Show New Quote" to get started!</p>
+  </div>
+
+  <!-- Category selection -->
+  <div class="controls">
     <label for="categorySelect">Category:</label>
     <select id="categorySelect">
-      <option value="all">All</option>
+      <option value="all">All Categories</option>
     </select>
 
     <button id="newQuoteBtn">Show New Quote</button>
+  </div>
+
+  <!-- Filter by category -->
+  <div class="controls">
+    <label for="categoryFilter">Filter Quotes:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
+  </div>
+
+  <!-- Action buttons -->
+  <div class="controls">
     <button id="showAddFormBtn">Add Quote</button>
     <button id="toggleListBtn">Show/Hide All Quotes</button>
+  </div>
 
-    <!-- Export & Import -->
+  <!-- Add quote form -->
+  <div id="addQuoteContainer"></div>
+
+  <!-- Quotes list -->
+  <div id="quotesListContainer"></div>
+
+  <!-- Import/Export controls -->
+  <div class="controls">
     <button id="exportBtn">Export Quotes (JSON)</button>
-    <label for="importFile" style="display:inline-flex; align-items:center; gap:8px;">
-      <input id="importFile" type="file" accept=".json" style="display:none" />
-      <button id="importBtn" type="button">Import Quotes (JSON)</button>
-    </label>
-  </section>
+    <input type="file" id="importFile" accept=".json" />
+  </div>
 
-  <div id="quoteDisplay" aria-live="polite">Press "Show New Quote" to begin.</div>
-
-  <!-- Where the add-quote form will be created dynamically -->
-  <div id="addQuoteContainer" class="form-section" aria-hidden="true"></div>
-
-  <!-- List of quotes with edit/delete controls -->
-  <section class="quotes-list" id="quotesListContainer"></section>
-
+  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
