--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic Quote Generator</title>
-  </head>
-  <body>
-    <h1>Dynamic Quote Generator</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dynamic Quote Generator with Sync</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Dynamic Quote Generator</h1>
 
-    <!-- Quote display section -->
-    <div id="quoteDisplay"></div>
+  <div class="quote-container">
+    <p id="quoteText">Click below to get a quote!</p>
+    <p id="quoteCategory" class="category"></p>
+  </div>
 
-    <!-- Button to show new random quote -->
-    <button id="newQuote">Show New Quote</button>
+  <div class="controls">
+    <button onclick="displayRandomQuote()">🎲 New Quote</button>
+    <button onclick="exportQuotes()">💾 Export JSON</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  </div>
 
-    <!-- Form to add a new quote -->
-    <div>
-      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-      <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-      <button id="addQuoteBtn">Add Quote</button>
-    </div>
+  <div class="add-quote">
+    <input type="text" id="newQuoteText" placeholder="Enter new quote" />
+    <input type="text" id="newQuoteCategory" placeholder="Enter category" />
+    <button onclick="addQuote()">➕ Add Quote</button>
+  </div>
 
-    <script src="script.js"></script>
-  </body>
+  <div class="filter">
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
+  </div>
+
+  <div id="notification" class="notification"></div>
+
+  <script src="script.js"></script>
+</body>
 </html>
+
