Full Dynamic Quote Generator with server sync

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dynamic Quote Generator with Sync</title>
+  <title>Dynamic Quote Generator with Server Sync</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
   <div class="quote-container">
-    <p id="quoteText">Click below to get a quote!</p>
+    <p id="quoteText">Click "New Quote" to start!</p>
     <p id="quoteCategory" class="category"></p>
   </div>
 
