Fix folder structure and global functions for autograder

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,133 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dynamic Quote Generator</title>
-  <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background: #f5f7fa;
-      color: #333;
-      padding: 2rem;
-      max-width: 700px;
-      margin: auto;
-    }
-
-    h1 {
-      text-align: center;
-      color: #444;
-    }
-
-    #quoteDisplay {
-      margin: 1.5rem 0;
-      padding: 1rem;
-      border-left: 5px solid #0078d4;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-    }
-
-    .quote-text {
-      font-size: 1.2rem;
-      font-style: italic;
-    }
-
-    .quote-category {
-      color: #555;
-      text-align: right;
-      font-weight: bold;
-    }
-
-    select, input, button {
-      padding: 8px 12px;
-      margin: 5px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-
-    button {
-      background: #0078d4;
-      color: white;
-      cursor: pointer;
-      border: none;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #005fa3;
-    }
-
-    #addQuoteContainer, #quotesListContainer {
-      margin-top: 1rem;
-      display: none;
-    }
-
-    .quote-item {
-      background: #fff;
-      padding: 0.7rem;
-      margin: 0.4rem 0;
-      border-radius: 6px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-
-    .quote-item .category {
-      display: block;
-      font-size: 0.9rem;
-      color: #555;
-      text-align: right;
-    }
-
-    .controls {
-      text-align: center;
-      margin: 1rem 0;
-    }
-  </style>
+  <title>Dynamic Quote Generator with Server Sync</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- Quote display -->
-  <div id="quoteDisplay">
-    <p class="quote-text">Click "Show New Quote" to get started!</p>
+  <div class="quote-container">
+    <p id="quoteText">Click "New Quote" to start!</p>
+    <p id="quoteCategory" class="category"></p>
   </div>
 
-  <!-- Category selection -->
   <div class="controls">
-    <label for="categorySelect">Category:</label>
-    <select id="categorySelect">
-      <option value="all">All Categories</option>
-    </select>
-
-    <button id="newQuoteBtn">Show New Quote</button>
+    <button onclick="displayRandomQuote()">🎲 New Quote</button>
+    <button onclick="exportQuotes()">💾 Export JSON</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
   </div>
 
-  <!-- Filter by category -->
-  <div class="controls">
-    <label for="categoryFilter">Filter Quotes:</label>
+  <div class="add-quote">
+    <input type="text" id="newQuoteText" placeholder="Enter new quote" />
+    <input type="text" id="newQuoteCategory" placeholder="Enter category" />
+    <button onclick="addQuote()">➕ Add Quote</button>
+  </div>
+
+  <div class="filter">
+    <label for="categoryFilter">Filter by Category:</label>
     <select id="categoryFilter" onchange="filterQuotes()">
       <option value="all">All Categories</option>
     </select>
   </div>
 
-  <!-- Action buttons -->
-  <div class="controls">
-    <button id="showAddFormBtn">Add Quote</button>
-    <button id="toggleListBtn">Show/Hide All Quotes</button>
-  </div>
+  <div id="notification" class="notification"></div>
 
-  <!-- Add quote form -->
-  <div id="addQuoteContainer"></div>
-
-  <!-- Quotes list -->
-  <div id="quotesListContainer"></div>
-
-  <!-- Import/Export controls -->
-  <div class="controls">
-    <button id="exportBtn">Export Quotes (JSON)</button>
-    <input type="file" id="importFile" accept=".json" />
-  </div>
-
-  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
+
