--- a/index.html
+++ b/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dynamic Quote Generator with Server Sync</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Quote Generator</title>
+    <style>
+        body { font-family: Arial, sans-serif; padding: 20px; }
+        #notification { display: none; background: #ffd; padding: 10px; margin-bottom: 10px; border: 1px solid #ccc; }
+        #quoteDisplay { margin: 20px 0; font-size: 1.2em; }
+        #quoteCategory { font-weight: bold; }
+        input, select, button { margin: 5px 0; padding: 5px; }
+    </style>
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
 
-  <div class="quote-container">
-    <p id="quoteText">Click "New Quote" to start!</p>
-    <p id="quoteCategory" class="category"></p>
-  </div>
+<h1>Dynamic Quote Generator</h1>
 
-  <div class="controls">
-    <button onclick="displayRandomQuote()">🎲 New Quote</button>
-    <button onclick="exportQuotes()">💾 Export JSON</button>
-    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-  </div>
+<div id="notification"></div>
 
-  <div class="add-quote">
-    <input type="text" id="newQuoteText" placeholder="Enter new quote" />
-    <input type="text" id="newQuoteCategory" placeholder="Enter category" />
-    <button onclick="addQuote()">➕ Add Quote</button>
-  </div>
+<div id="quoteDisplay">
+    <p id="quoteText"></p>
+    <p id="quoteCategory"></p>
+</div>
 
-  <div class="filter">
-    <label for="categoryFilter">Filter by Category:</label>
-    <select id="categoryFilter" onchange="filterQuotes()">
-      <option value="all">All Categories</option>
-    </select>
-  </div>
+<button id="newQuoteBtn">Show New Quote</button>
 
-  <div id="notification" class="notification"></div>
+<hr>
 
-  <script src="script.js"></script>
+<h3>Add New Quote</h3>
+<input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+<input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+<button onclick="addQuote()">Add Quote</button>
+
+<hr>
+
+<h3>Filter Quotes</h3>
+<select id="categoryFilter" onchange="filterQuotes()"></select>
+
+<hr>
+
+<h3>Import / Export Quotes</h3>
+<input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+<button onclick="exportQuotes()">Export Quotes</button>
+
+<script src="script.js"></script>
 </body>
 </html>
 
