--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dynamic Quote Generator</title>
-<style>
-body { font-family: Arial; padding: 20px; }
-#notification { display:none; background:#ffd; padding:10px; margin-bottom:10px; border:1px solid #ccc; }
-#quoteDisplay { margin:20px 0; font-size:1.2em; }
-#quoteCategory { font-weight:bold; }
-input, select, button { margin:5px 0; padding:5px; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Quote Generator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Dynamic Quote Generator</h1>
 
-<h1>Dynamic Quote Generator</h1>
+  <!-- Quote Display -->
+  <div id="quoteDisplay"></div>
+  <button id="newQuote">Show New Quote</button>
 
-<div id="notification"></div>
+  <!-- Add New Quote -->
+  <div>
+    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+    <button id="addQuoteBtn">Add Quote</button>
+  </div>
 
-<div id="quoteDisplay">
-<p id="quoteText"></p>
-<p id="quoteCategory"></p>
-</div>
+  <!-- Category Filter -->
+  <div>
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter">
+      <option value="all">All Categories</option>
+    </select>
+  </div>
 
-<button id="newQuoteBtn">Show New Quote</button>
+  <!-- JSON Import/Export -->
+  <div>
+    <button id="exportJsonBtn">Export Quotes JSON</button>
+    <input type="file" id="importFile" accept=".json" />
+  </div>
 
-<hr>
-<h3>Add New Quote</h3>
-<input id="newQuoteText" type="text" placeholder="Enter a new quote">
-<input id="newQuoteCategory" type="text" placeholder="Enter quote category">
-<button onclick="addQuote()">Add Quote</button>
+  <!-- Notifications -->
+  <div id="notification" style="color: green; margin-top: 10px;"></div>
 
-<hr>
-<h3>Filter Quotes</h3>
-<select id="categoryFilter" onchange="filterQuotes()"></select>
-
-<hr>
-<h3>Import / Export Quotes</h3>
-<input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)">
-<button onclick="exportQuotes()">Export Quotes</button>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
